Revision history for Red

{{$NEXT}}
    - Fix has-one create

0.1.38  2021-02-22T19:41:38Z
    - Fix multi comparators conflict

0.1.37  2021-02-22T19:08:09Z
    - Add comparison to DateTime

0.1.36  2021-02-20T23:44:52Z
    - NM relationship sample and test

0.1.35  2021-02-18T23:12:51Z
    - Remove use lib from CLI
    - add -I option to CLI
    - add --debug option to CLI

0.1.34  2021-02-18T01:53:05Z
    - Use DB's table formatter

0.1.33  2021-02-16T19:31:56Z
    - Fix refresh

0.1.32  2021-02-16T01:55:55Z
    - Fix pre-compiled experimental features
    - Fix formatter spelling

0.1.31  2021-02-14T21:04:28Z
    - Add experimental refreshable

0.1.30  2021-02-14T20:53:39Z
    - Fix column type bug
    - Add experimental update-/aggregate-supply
    - Add no-optimization use's option

0.1.29  2020-11-22T00:11:21Z
    - fix in translation
    - fix .join-model's column
    - fix fallback

0.1.28  2020-11-07T18:25:01Z
    - create experimental `has-one`

0.1.27  2020-10-31T21:28:57Z
    - Unique constraint fixes

0.1.26  2020-07-24T00:25:06+01:00
    - Add inflation to Str -> Duration
    - Fix some comparisons between Seq and ResultSeq

0.1.25  2020-07-23T21:01:46+01:00
    - Adds now and today to columnMethods

0.1.24  2020-07-22T23:22:30+01:00
    - Make before-update phaser work on updating ResultSeq

0.1.23  2020-07-22T21:20:24+01:00
    - Fix bind order on update

0.1.22  2020-07-22T17:49:46+01:00
    - Fix created obj's Poxy
    - fix new-from-data from retuning data
    - Add -- and ++ prefix and postfix

0.1.21  2020-07-21T01:15:24+01:00
    - Add experimental short name for tables

0.1.20  2020-07-21T00:43:15+01:00
    - Add experimental feature for format table name

0.1.19  2020-07-20T18:01:10+01:00
    - Fix bug on setting type of a column

0.1.18  2020-07-17T20:25:01+01:00
    - Set unique fields by group

0.1.17  2020-07-16T01:15:11+01:00
    - custom join ,create
    - custom join from defined model

0.1.16  2020-07-11T17:54:39+01:00