@@ -15,7 +15,7 @@ role Bla { has Str $.a is column }
 model Ble does Bla {}
 
 $*RED-DB.when: :once, :return[], qq:to/EOSQL/;
-    CREATE TABLE ble(
+    CREATE TABLE "ble" (
         a varchar(255) NOT NULL
     )
 EOSQL
@@ -25,7 +25,7 @@ Ble.^create-table;
 model Bli does Bla { has Str $.b is column }
 
 $*RED-DB.when: :once, :return[], qq:to/EOSQL/;
-    CREATE TABLE bli(
+    CREATE TABLE "bli" (
         a varchar(255) NOT NULL,
         b varchar(255) NOT NULL
     )
@@ -33,7 +33,7 @@ EOSQL
 
 Bli.^create-table;
 
-$*RED-DB.when: :once, :return[{:1a}], "insert into ble ( a ) values ( ? )";
+$*RED-DB.when: :once, :return[{:1a}], 'insert into "ble" ( a ) values ( ? )';
 Ble.^create: :1a;
 
 role SerialId {
@@ -52,14 +52,14 @@ model Blu does SerialId {
 }
 
 $*RED-DB.when: :once, :return[], qq:to/EOSQL/;
-    create table blo (
+    create table "blo" (
         blu_id integer null references blu (id),
         id integer not null primary key autoincrement
     )
 EOSQL
 
 $*RED-DB.when: :once, :return[], qq:to/EOSQL/;
-    create table blu (
+    create table "blu" (
         id integer not null primary key autoincrement
     )
 EOSQL
@@ -67,13 +67,13 @@ EOSQL
 Blo.^create-table;
 Blu.^create-table;
 
-$*RED-DB.when: :once, :return[{:1id}],            q[insert into blu default values];
-$*RED-DB.when: :once, :return[{:1id, :1blu-id},], q[insert into blo( blu_id )values( ? )];
+$*RED-DB.when: :once, :return[{:1id}],            q[insert into "blu" default values];
+$*RED-DB.when: :once, :return[{:1id, :1blu-id},], q[insert into "blo"( blu_id )values( ? )];
 
 my $blu = Blu.^create;
 my $blo = $blu.blo.create;
 
-$*RED-DB.when: :3times, :return[{:1id}], "select blu.id from blu where blu.id = ? limit 1";
+$*RED-DB.when: :3times, :return[{:1id}], 'select "blu".id from "blu" where "blu".id = ? limit 1';
 
 isa-ok $blu, Blu;
 isa-ok $blo, Blo;
