@@ -1,6 +1,7 @@
 Revision history for Red
 
 {{$NEXT}}
+    - Add table-name-wrapper
     - Fix has-one create
 
 0.1.38  2021-02-22T19:41:38Z
